--- a/CedarMapsSDK/src/main/AndroidManifest.xml
+++ b/CedarMapsSDK/src/main/AndroidManifest.xml
@@ -1,7 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cedarstudios.cedarmapssdk">
-
+<manifest package="com.cedarstudios.cedarmapssdk">
     <application>
     </application>
-
 </manifest>
