Updates to Mapbox 8.0.0
This is major version release. It contains A LOT of breaking changes.

--- a/CedarMapsSDK/src/main/AndroidManifest.xml
+++ b/CedarMapsSDK/src/main/AndroidManifest.xml
@@ -1,7 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cedarstudios.cedarmapssdk">
-
-    <application>
-    </application>
-
+<manifest package="com.cedarstudios.cedarmapssdk">
 </manifest>
