--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,7 @@
+android.enableJetifier=true
+android.useAndroidX=true
 GROUP=com.cedarmaps
-VERSION_NAME=4.1.0
+VERSION_NAME=4.2.0
 
 # Project-wide Gradle settings.
 
