--- a/CedarMapsSDK/build.gradle
+++ b/CedarMapsSDK/build.gradle
@@ -3,22 +3,22 @@ apply plugin: 'signing'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group = "com.cedarmaps"
-version = "4.1.0"
+version = "4.2.0"
 def siteUrl = 'http://cedarmaps.com'
 def gitUrl = 'http://cedarmaps.com/git'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 15 //IceCream Sandwich 4.0.3
-        targetSdkVersion 28 //Pie
+        targetSdkVersion 29 //10
     }
 }
 
 dependencies {
     api 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.3.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'com.google.code.gson:gson:2.8.5'
 }
 
