--- a/CedarMapsSDK/build.gradle
+++ b/CedarMapsSDK/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'signing'
 apply plugin: 'com.github.dcendents.android-maven'
 
 group = "com.cedarmaps"
-version = "4.2.0"
+version = "4.2.1"
 def siteUrl = 'http://cedarmaps.com'
 def gitUrl = 'http://cedarmaps.com/git'
 
@@ -18,8 +18,8 @@ android {
 
 dependencies {
     api 'com.mapbox.mapboxsdk:mapbox-android-sdk:8.4.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.6' //We should stop at 3.12.x since later versions run on API 21+ only
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
 
 // From https://raw.github.com/mcxiaoke/gradle-mvn-push/master/gradle-mvn-push.gradle
